[project]
name = "arxiv-api-search"
version = "0.1.0"
description = "Search arXiv with boolean expressions, export results as BibTeX."
authors = [
    {name = "Juha Jeronen", email = "juha.m.jeronen@gmail.com"},
]
dependencies = [
    "requests>=2.31",
    "feedparser>=6.0",
    "bibtexparser>=2.0.0b7",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
arxiv-api-search = "arxiv_api_search.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.0",
    "flake8>=7.3.0",
    "pytest-cov>=7.1.0",
    "autopep8",
    "importmagic",
    "epc",
    "jedi>=0.19.2",
    # For local pre-release sanity checks: `python -m build --sdist`
    # exercises the same sdist path that CI runs on tag push.
    "build",
    # For validating .github/workflows/*.yml during local dev (not used at runtime).
    "pyyaml>=6.0.3",
]

[tool.ruff]
line-length = 130
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "W", "F", "SIM"]
ignore = [
    # pycodestyle
    "E203",   # whitespace before ':' — needed for slice alignment
    "E265",   # block comment should start with '# ' — commented-out code, markers
    "E301",   # expected 1 blank line — blank lines are semantic paragraph breaks
    "E302",   # expected 2 blank lines before def — same
    "E305",   # expected 2 blank lines after end — same
    "E306",   # expected blank line before nested def — same
    "E402",   # module level import not at top — conditional/deferred imports
    "E501",   # line too long — advisory, not enforced
    "E731",   # lambda assignment — closures are idiomatic in this codebase
    # flake8-simplify
    "SIM102",  # collapsible if — nested ifs often represent distinct semantic guards
    # Note: SIM103 (return condition directly) is intentionally NOT ignored here.
    # It is enabled as an advisory — CI runs it in a non-failing second pass.
    "SIM105",  # contextlib.suppress — try/except/pass is more flexible and explicit
    "SIM108",  # ternary instead of if/else — often less readable, no real gain
    "SIM114",  # combine if branches — match-casing style; autofix would damage semantics
    "SIM117",  # combine with statements — nesting shows parent/child relationships
    "SIM118",  # in-dict-keys — explicit .keys() marks the variable as a dictlike
    "SIM300",  # yoda conditions — natural reading order preferred
    "SIM910",  # dict.get with None default — explicit None documents programmer intent
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # re-exports via star-import
